@@ -23,18 +23,18 @@ import java.net.UnknownHostException;
  *
  * An example based on
  * {@link com.illposed.osc.OSCPortTest#testMessageWithArgs()}:
- * <pre>
+{@code
 	OSCPort sender = new OSCPort();
-	Object args[] = new Object[2];
-	args[0] = new Integer(3);
-	args[1] = "hello";
+	List<Object> args = new ArrayList<Object>(2);
+	args.add(Integer.valueOf(3));
+	args.add("hello");
 	OSCMessage msg = new OSCMessage("/sayhello", args);
-	 try {
+	try {
 		sender.send(msg);
-	 } catch (Exception e) {
-		 showError("Couldn't send");
-	 }
- * </pre>
+	} catch (Exception e) {
+		showError("Couldn't send");
+	}
+}
  *
  * @author Chandrasekhar Ramakrishnan
  */
@@ -43,21 +43,31 @@ public class OSCPortOut extends OSCPort {
 	private InetAddress address;
 
 	/**
+	 * Create an OSCPort that sends to address:port using a specified socket.
+	 * @param address the UDP address to send to
+	 * @param port the UDP port to send to
+	 * @param socket the DatagramSocket to send from
+	 */
+	public OSCPortOut(InetAddress address, int port, DatagramSocket socket) {
+		super(socket, port);
+		this.address = address;
+	}
+
+	/**
 	 * Create an OSCPort that sends to address:port.
 	 * @param address the UDP address to send to
 	 * @param port the UDP port to send to
+	 * @throws SocketException when failing to create a (UDP) out socket
 	 */
-	public OSCPortOut(InetAddress address, int port)
-		throws SocketException
-	{
-		super(new DatagramSocket(), port);
-		this.address = address;
+	public OSCPortOut(InetAddress address, int port) throws SocketException {
+		this(address, port, new DatagramSocket());
 	}
 
 	/**
 	 * Create an OSCPort that sends to address,
 	 * using the standard SuperCollider port.
 	 * @param address the UDP address to send to
+	 * @throws SocketException when failing to create a (UDP) out socket
 	 */
 	public OSCPortOut(InetAddress address) throws SocketException {
 		this(address, DEFAULT_SC_OSC_PORT);
@@ -66,6 +76,8 @@ public class OSCPortOut extends OSCPort {
 	/**
 	 * Create an OSCPort that sends to "localhost",
 	 * on the standard SuperCollider port.
+	 * @throws UnknownHostException if the local host name could not be resolved into an address
+	 * @throws SocketException when failing to create a (UDP) out socket
 	 */
 	public OSCPortOut() throws UnknownHostException, SocketException {
 		this(InetAddress.getLocalHost(), DEFAULT_SC_OSC_PORT);
@@ -74,6 +86,7 @@ public class OSCPortOut extends OSCPort {
 	/**
 	 * Send an OSC packet (message or bundle) to the receiver we are bound to.
 	 * @param aPacket the bundle or message to send
+	 * @throws IOException if a (UDP) socket I/O error occurs
 	 */
 	public void send(OSCPacket aPacket) throws IOException {
 		byte[] byteArray = aPacket.getByteArray();
